Fix overflow-x and tweak mobile blur

--- a/src/index.css
+++ b/src/index.css
@@ -78,9 +78,10 @@ h1 {
 
 .events-container {
   width: 100vw;
-  overflow: auto;
   height: 100vh;
   position: absolute;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .events {
@@ -186,11 +187,8 @@ h1 {
     height 0.2s ease, transform 0.2s ease;
 
   @media (max-width: 48rem) {
-    opacity: 0.7;
+    opacity: 1;
     filter: blur(1rem);
-    width: calc(100% + 2rem);
-    height: calc(100% + 2rem);
-    transform: translate(-1rem, -1rem);
   }
 }
 
